[metadata]
name = gce-api
version = 2014.1.1
summary = OpenStack Gceapi Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    gceapi
scripts =
    bin/gceapi-db-setup

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    gce-api=gceapi.cmd.api:main
    gce-api-manage=gceapi.cmd.manage:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = gceapi/locale
domain = gceapi

[update_catalog]
domain = gceapi
output_dir = gceapi/locale
input_file = gceapi/locale/gceapi.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gceapi/locale/gceapi.pot

[nosetests]
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2
tests=gceapi/tests
cover-package = gceapi
cover-html = true
cover-erase = true
