[metadata]
name = gce-api
version = 2.0.0
summary = OpenStack Gceapi Service
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/gce-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    gceapi

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    gceapi = gceapi.opts:list_opts
    gceapi.api = gceapi.api.opts:list_opts

console_scripts =
    gce-api=gceapi.cmd.api:main
    gce-api-manage=gceapi.cmd.manage:main

tempest.test_plugins =
    gce_tests = gceapi.tests.functional.plugin:GCETempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = gceapi/locale
domain = gceapi

[update_catalog]
domain = gceapi
output_dir = gceapi/locale
input_file = gceapi/locale/gceapi.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gceapi/locale/gceapi.pot
